--- a/LocationServices/app/src/main/res/values/strings.xml
+++ b/LocationServices/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">AplicacaoTeste</string>
+    <string name="app_name">Location Services</string>
     <string name="action_settings">Settings</string>
 </resources>
